argocd/fooocus/manifests/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fooocus
  labels:
    app.kubernetes.io/name: fooocus
spec:
  serviceName: fooocus
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fooocus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fooocus
    spec:
      runtimeClassName: nvidia
      containers:
        - name: fooocus
          image: harbor.yanello.net/ghcr/lllyasviel/fooocus:2.5.5@sha256:a1c3251054a38c22f783b680600050bedf7fe547d0239a8d772d0d372a98a5ce
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7865
              protocol: TCP
          resources:
            requests:
              memory: 16Gi
              nvidia.com/gpu: "1"
              cpu: 500m
            limits:
              memory: 24Gi
              nvidia.com/gpu: "1"
          readinessProbe:
            tcpSocket:
              port: 7865
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 7865
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /content/data
              name: data
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-ssd-nfs
        resources:
          requests:
            storage: 10Gi
