argocd/fooocus/manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fooocus
  labels:
    app.kubernetes.io/name: fooocus
spec:
  type: ClusterIP
  ports:
    - port: 7865
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: fooocus
